@@ -550,3 +550,4 @@
 2011-12-02  Mike Blumenkrantz
 
         * added eet_file_get to return the filename of an Eet_File
+        * Eet_File filenames are now stringshared
